--- a/assets/css/nik_large.css
+++ b/assets/css/nik_large.css
@@ -1,7 +1,6 @@
 /*  =====================================================
        Large devices (desktops, 992px and up)
     ===================================================== */
-
 @media (min-width: 992px) and (max-width: 1199px) {
 	/*  =====================================================
         GENERAL FUNCTIONS
@@ -216,11 +215,13 @@
 	html.nik .post p {
 		/* display:none; */
 	}
-	html.nik .post-title {
+	html.nik .post-title .title{
 		display: block;
 		max-height: 85px;
 		width: 100%;
 		padding: 10px 15px;
+	}
+	html.nik .post-title .title{
 		font-size: 1.1rem;
 	}
 	html.nik .post-content {
@@ -454,7 +455,7 @@
 	html.nik .news-post a {
 		min-height: 270px;
 	}
-	html.nik .news-post .post-title {
+	html.nik .news-post .post-title .title {
 		font-size: 1.3em;
 	}
 	html.nik .news-post .float-post-content p {
