--- a/assets/css/nik_extra_small.css
+++ b/assets/css/nik_extra_small.css
@@ -1,7 +1,6 @@
 /*  =====================================================
         Extra small devices (portrait phones, less than 576px)
     ===================================================== */
-
 @media (max-width: 575px) {
 	/*  =====================================================
         GENERAL FUNCTIONS
@@ -268,8 +267,10 @@
 		display: block;
 		max-height: 85px;
 		line-height: 1.1em;
-		width: 100%;
+		width: auto;
 		padding: 10px 15px;
+	}
+	html.nik .post-title .title {
 		font-size: 1.1rem;
 	}
 	html.nik .post-content {
@@ -278,6 +279,7 @@
 		display: block;
 	}
 	html.nik .post-category {
+		width: auto;
 		position: absolute;
 		display: block;
 		bottom: 0px;
@@ -397,6 +399,7 @@
 		display: block;
 	}
 	html.nik .post .post-content-wrapper .post-category {
+		width: auto;
 		position: absolute;
 		display: block;
 		bottom: 0px;
@@ -575,7 +578,7 @@
 	html.nik .news-post a {
 		min-height: 270px;
 	}
-	html.nik .news-post .post-title {
+	html.nik .news-post .post-title .title {
 		font-size: 1.3em;
 	}
 	html.nik .news-post .float-post-content p {
