--- a/assets/css/nik_small.css
+++ b/assets/css/nik_small.css
@@ -388,7 +388,8 @@
 	/*  =====================================================
 		        SINGLE POSTS
 		    ===================================================== */
-	html.nik .single-post .post-featured-image {
+	html.nik .single-post .post-featured-image
+	, html.nik .single-post .single-post.post>.row:first-child {
 		min-height: 270px;
 		max-height: 270px;
 	}
